# fastapi-auth-jwt

./: README.md  pyproject.toml
src/demo/: app.py
src/demo/lib/: jwt.py  models.py  oauth2.py  password.py  secrets.py
src/demo/routes/: auth.py  users.py
