[project]
name = "demo"
version = "0.0.1"
requires-python = ">=3.11"
authors = [{ name = "Fredrik Averpil", email = "fredrik.averpil@gmail.com" }]
classifiers = [
  # https://pypi.org/classifiers/
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fastapi[all]==0.98.0",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.3.0",
]

